--- a/intro-to-maptime-ITA/index.html
+++ b/intro-to-maptime-ITA/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="utf-8">
-  <title>MAPTIME ROMA - PRESETNAZIONE</title>
+  <title>MAPTIME ROMA - PRESENTAZIONE</title>
   <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
   <meta name="author" content="Hakim El Hattab">
   <meta name="apple-mobile-web-app-capable" content="yes" />
