--- a/intro-to-maptime-ITA/index.html
+++ b/intro-to-maptime-ITA/index.html
@@ -50,8 +50,8 @@
         <br>
         <p>Potete seguire la presentazione anche qui:<br>
           <a target="_blank"
-          href="http://maptime.io/roma/maptime-intro"
-          style="font-size:48px">http://maptime.io/roma/maptime-intro</a>
+          href="maptime.iop/roma/intro-to-maptime-ITA/index.html"
+          style="font-size:48px">maptime.iop/roma/intro-to-maptime-ITA/index.html</a>
           <br>
           <br>
         </p>
