--- a/resources/intro-to-postgis-ITA/index.html
+++ b/resources/intro-to-postgis-ITA/index.html
@@ -44,19 +44,18 @@
       <div class="slides">
 
         <section data-transition="zoom">
-        <h1>POSTGIS INTRO</h1>
+        <h1>GET YOUR DATA OUT OF SHAPE</h1>
         <img src="images/maptime_roma_logo.png" border="0"/>
         </section >
 
         <section data-transition="fade">
-        <h1>Connettetevi a</h1>
         <h3>
           WI-FI: SalaConvegni<br>
           PW: SalaConvegni2012<br>
         </h3>
         <br>
-        <p>Potete seguire la presentazione anche <a target="_blank" href="http://maptime.io/roma/resources/intro-to-postgis-ITA" style="font-size:48px">ONLINE</a></p>
-        <p>Questo tutorial &#233; basato sul workshop di <a href:"www.buondlessgeo.com">Boundelssgeo</a></p>
+        <p>PRESENTAZIONE <a target="_blank" href="http://maptime.io/roma/resources/intro-to-postgis-ITA" style="font-size:48px">ONLINE</a></p>
+        <p>Tutorial &#233; basato sul workshop di <a href:"www.buondlessgeo.com">Boundelssgeo</a></p>
       </section>
 
       <section data-transition="fade">
@@ -87,9 +86,8 @@
 
         <section data-transition="fade">
           <h2>Cosa lo rende SPAZIALE?</h2>
-          <p>Un normale DB contiene stringhe, numeri e date</p>
-          <p>quelli spaziali contengono elementi <em>geografici</em></br>
-          gerarchi che ereditano attributi, metodi e funzioni.</p>
+          <p>Un normale DB contiene <em>stringhe</em>, <em>numeri</em> e <em>date</em>; quelli spaziali contengono elementi <span class="fragment"><em>geografici</em></br>
+          gerarchi che ereditano attributi, metodi e funzioni.</span></p>
           <img src="images/hierarchy.png">
           <p></br><small>immagine dal sito boundlessgeo.com</small></p>
         </section>
