--- a/resources/intro-to-postgis-ITA/index.html
+++ b/resources/intro-to-postgis-ITA/index.html
@@ -87,10 +87,10 @@
         <section data-transition="fade">
           <h2>Cosa lo rende SPAZIALE?</h2>
           <p>Un normale DB contiene <em>stringhe</em>, <em>numeri</em> e <em>date</em></br>
-          quelli spaziali contengono elementi <span class="fragment current-visible"><em>geografici</em></br>
+          quelli spaziali contengono elementi <span class="fragment current-visible"><em>geografici</em></span></br>
           gerarchi che ereditano attributi, metodi e funzioni.</p>
           <img src="images/hierarchy.png">
-          <p></br><small>immagine dal sito boundlessgeo.com</small></p></span>
+          <p></br><small>immagine dal sito boundlessgeo.com</small></p>
         </section>
 
 
