--- a/resources/intro-to-postgis-ITA/index.html
+++ b/resources/intro-to-postgis-ITA/index.html
@@ -86,11 +86,11 @@
 
         <section data-transition="fade">
           <h2>Cosa lo rende SPAZIALE?</h2>
-          <p>Un normale DB contiene <em>stringhe</em>, <em>numeri</em> e <em>date</em></br>
-          quelli spaziali contengono elementi <span class="fragment current-visible"><em>geografici</em></span></br>
-          gerarchi che ereditano attributi, metodi e funzioni.</p>
+          <p>Un normale DB contiene <em>stringhe</em>, <em>numeri</em> e <em>date</em></br></p>
+          <p class="fragment current-visible">quelli spaziali contengono elementi <em>geografici</em></span></br>
+          gerarchi che ereditano attributi, metodi e funzioni.</br>
           <img src="images/hierarchy.png">
-          <p></br><small>immagine dal sito boundlessgeo.com</small></p>
+          </br><small>immagine dal sito boundlessgeo.com</small></p>
         </section>
 
 
