--- a/resources/intro-to-postgis-ITA/index.html
+++ b/resources/intro-to-postgis-ITA/index.html
@@ -55,7 +55,7 @@
         </h3>
         <br>
         <p>PRESENTAZIONE <a target="_blank" href="http://maptime.io/roma/resources/intro-to-postgis-ITA" style="font-size:48px">ONLINE</a></p>
-        <p>Tutorial &#233; basato sul workshop di <a href:"www.buondlessgeo.com">Boundelssgeo</a></p>
+        <p>Tutorial &#233; basato sul workshop di <a href:"http://workshops.boundlessgeo.com/postgis-intro/">Buondlessgeo</a></p>
       </section>
 
       <section data-transition="fade">
@@ -118,7 +118,7 @@
         <section>
               <img src="images/pgadmin_03.png">
               </br><small>immagine dal sito boundlessgeo.com</small></p>
-                        </section>
+        </section>
 
             <section>
               <img src="images/pgadmin_02.png">
@@ -144,7 +144,7 @@
             </br><code>SELECT postgis_full_version();</code></li>
             </ul>
           </section>
-        </section>
+
 
       </section>
 
