--- a/resources/intro-leaflet-ITA/index.html
+++ b/resources/intro-leaflet-ITA/index.html
@@ -96,7 +96,7 @@
 				<section>
 					<p>
 						Apriamo il file index.html . Per prima cosa andiamo a caricare la libreria Leaflet (file con estensione .js), insieme con il relativo foglio di stile (estensione .css).</br>
-						Per fare questo aggiungiamo i link agli scripts necessari in fondo al file, ma prima della chiusura del body (cioè prima del tag <code></body></code>) :</br>
+						Per fare questo aggiungiamo i link agli scripts necessari in fondo al file, ma prima della chiusura del body (cioè prima del tag <and></body></and>) :</br>
 
 						```HTML
 						<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
