--- a/resources/intro-leaflet-ITA/index.html
+++ b/resources/intro-leaflet-ITA/index.html
@@ -105,7 +105,7 @@
 					</section>
 
 					<section>
-						Poi aggiungiamo il codice per definire lo stile della pagina e della mappa (dimensioni, posizione ecc..). Per fare questo usiamo un tag particolare <style></style>dentro cui mettere il codice. Questo tag ed il suo contenuto vanno messi all'interno dell'<header></header></br>
+						Poi aggiungiamo il codice per definire lo stile della pagina e della mappa (dimensioni, posizione ecc..). Per fare questo usiamo un tag particolare <style></style>dentro cui mettere il codice. Questo tag ed il suo contenuto vanno messi all'interno dell' < and ><header></header></br>
 						<pre><code data-trim contenteditable style="font-size: 16px; margin-top: 10px;">
     				body { margin:0; padding:0; }
 #map { position:absolute; top:0; bottom:0; width:100%; }
