--- a/resources/intro-leaflet-ITA/index.html
+++ b/resources/intro-leaflet-ITA/index.html
@@ -92,6 +92,7 @@
 				</section>
 				</section>
 </section>
+</section>
 <section>
 <h1>Step 1 - Prepariamo la pagina</h1>
 <p>Apriamo il file <code>index.html``.</br>
@@ -297,7 +298,6 @@ map.addLayer(markers);</code></pre>
 <p><a href="/Volumes/old_hdd/Utenti/mic/Sites/milan/resources/edizione1/tutorial/mappa-fontanelle/files-step-by-step/index8.html"><strong> File step8</strong></a>    </p>
 <h1 id="fin"><a name="user-content-fin" href="#fin" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>~ Fin ~</h1></article></body></html>
 </section>
-
 			</div>
 
 		</div>
