--- a/resources/intro-leaflet-ITA/index.html
+++ b/resources/intro-leaflet-ITA/index.html
@@ -41,10 +41,9 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Leaflet.js</h1>
-					<h3>Introduzione alle webmap</h3>
+					<img data-src="./img/leaflet.jpg" alt="Leafletjs logo">
 					<p>
-						<small>Basato su <a href="http://maptime.io/milan">Maptime Milan</a></small>
+						<small>Copiato da <a href="http://maptime.io/milan">Maptime Milan</a></small>
 					</p>
 				</section>
 
@@ -59,12 +58,12 @@
 				<!-- Storia -->
 				<section>
 					<section>
-						Cos'&#233; ?
+						<h1>Leafletjs</h1>
 					</section>
 				<section>
 					<p><quote>"una moderna libreria javascript open source usata per creare web-map.<br>
 						Rilasciata nel 2011 per desktop e mobile, supporta HTML 5 e CSS3.<br>
-						Usata da grandi siti web come FourSquare, Pinterest e Flickr.<br>
+						Usata da grandi siti web: Flickr, foursquare, Pinterest, craigslist, Data.gov, IGN, Wikimedia, OSM, Meetup, WSJ, Mapbox, CartoDB, GIS Cloud …<br>
 						Sviluppata da <a href="http://agafonkin.com/en/" target="_blank">Vladimir Agafonkin</a>"</quote></p>
 						<p>da <a href="http://en.wikipedia.org/wiki/Leaflet_%28software%29" target="_blank">wikipedia</a></p>
 				</section>
@@ -81,9 +80,9 @@
 			</section>
 
 				<!-- TUTORIAL -->
-				<section>
-					<h2>TUTORIAL</h2>
-					<h3>Vedovelle Vs. Nasoni</h3>
+				<section data-background="./img/tutorial.png">
+						<h1><SPAN STYLE="background-color: #C0C0C0">TUTORIAL</span></h1>
+					<h2><SPAN STYLE="background-color: #C0C0C0">Vedovelle Vs. Nasoni</span></h2>
 				</section>
 				<section>
 				<section>
@@ -91,7 +90,7 @@
 				</section>
 
 				<section>
-						<p>Creiamo un file HTML, <a href="http://www.w3schools.com/html/tryit.asp?filename=tryhtml_basic_document" target="_blank"><code>index.html</code></a><br>
+						<p>Creiamo un file HTML, <a href="./files-step-by-step/index1.txt" target="_blank"><code>index.html</code></a><br>
 						Carichiamo la libreria Leaflet (file con estensione .js)<br>
 						<pre><code class='html'>
 &lt;script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"&gt;&lt;/script&gt;
@@ -436,6 +435,9 @@ map.addLayer(markers);
 		<p> <a href='./files-step-by-step/index8.txt' target="_blank">QUI il codice index8.html</a></p>
 	</section>
 
+</section>
+
+<section data-background="./img/fine.gif">
 </section>
 
 
